After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703623 - Brightness OSD does not work anymore
Brightness OSD does not work anymore
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-04 15:44 UTC by Mantas Mikulėnas (grawity)
Modified: 2013-07-05 13:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
media-keys: Fix brightness for new power API (997 bytes, patch)
2013-07-05 07:20 UTC, Bastien Nocera
committed Details | Review

Description Mantas Mikulėnas (grawity) 2013-07-04 15:44:26 UTC
After pressing the brightness keys in the keyboard, the following is printed instead of displaying the brightness OSD:

(gnome-settings-daemon:192940): GLib-GIO-WARNING **: Type of return value is incorrect: expected '(i)', got '(u)''

(gnome-settings-daemon:192940): media-keys-plugin-WARNING **: Failed to set new screen percentage: Timeout was reached

The following is also printed immediately after starting gnome-settings-daemon. I don't know if it's related.

(gnome-settings-daemon:192940): GLib-GObject-WARNING **: value "100.000000" of type 'gdouble' is invalid or out of range for property 'percentage' of type 'gdouble'

gnome-settings-daemon 3.9.3.r16.g1a5bd57
Comment 1 Bastien Nocera 2013-07-05 07:20:15 UTC
Created attachment 248434 [details] [review]
media-keys: Fix brightness for new power API
Comment 2 Bastien Nocera 2013-07-05 07:21:23 UTC
Attachment 248434 [details] pushed as 5f188fe - media-keys: Fix brightness for new power API
Comment 3 Bastien Nocera 2013-07-05 07:23:37 UTC
(In reply to comment #0)
> After pressing the brightness keys in the keyboard, the following is printed
> instead of displaying the brightness OSD:
> 
> (gnome-settings-daemon:192940): GLib-GIO-WARNING **: Type of return value is
> incorrect: expected '(i)', got '(u)''
> 
> (gnome-settings-daemon:192940): media-keys-plugin-WARNING **: Failed to set new
> screen percentage: Timeout was reached

That's fixed.

> The following is also printed immediately after starting gnome-settings-daemon.
> I don't know if it's related.
> 
> (gnome-settings-daemon:192940): GLib-GObject-WARNING **: value "100.000000" of
> type 'gdouble' is invalid or out of range for property 'percentage' of type
> 'gdouble'

That's not. If it still happens, run:
gdb --args /path/to/gnome-settings-daemon -r --g-fatal-warnings

And gather the backtrace in a new bug.
Comment 4 Mantas Mikulėnas (grawity) 2013-07-05 11:11:53 UTC
Built 5f188fe; the "out of range" warning went away – but it still complains about the incorrect return value type (the error message remains exactly the same).


(Is it okay to change status to "Unconfirmed" in such cases?)
Comment 5 Bastien Nocera 2013-07-05 13:48:11 UTC
Really fixed in master. Best test the changes next time...