media-keys: Fix brightness for new power API

https://bugzilla.gnome.org/show_bug.cgi?id=703623